# rl-game-train

cpp/: sample-code.cpp
cpp/ai/: feature.cpp  feature.h  judgement.cpp  judgement.h
cpp/engine/: action.h  environment.h  game_state.h  observation.h  reward.h  simulator.h
cpp/include/: game_state.h  observation.h  reward.h  simulator.h
cpp/inference/: model_loader.cpp  model_loader.h
cpp/strategy/: candidate.h
models/: best_policy_weights.npz  best_result_summary.json  best_weights.cpp  best_weights.txt  latest_result.txt  policy_weights.npz  result_summary.json  training_log.csv  weights.cpp  weights.txt
models/test_best_run/: best_result_summary.json
python/: env_wrapper.py  train.py
python/data/: dataset_builder.py  replay_buffer.py  selfplay.py
python/feature/: feature_extractor.py
python/model/: ranking_model.py
python/tests/: test_training.py
python/train/: loss.py  result_summary.py  run_training.py  train.py  train_loop.py
rl-train/cpp/: CMakeLists.txt  bindings.cpp
rl-train/cpp/include/: action.h  environment.h
rl-train/cpp/src/: environment.cpp  observation.cpp  reward.cpp  simulator.cpp
tools/: export_weights.py  update_sample_code.py
